[package]
name = "dockerfile-parser"
version = "0.1.0"
authors = ["Stephen OBrien <wayofthepie@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0"
caseless = "0.2.1"

[dev-dependencies]
proptest = "0.10.1"
const_format = "0.2.9"
criterion = "0.3.3"


[[bench]]
name = "bench"
harness = false
